--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "2020 Honours R Research Project"
 author: "Gidon Nerwich 1476465 and Brigitte Winterstein 2401298"
+date: "16 September 2020"
 ---
 
 Gidon Nerwich and Brigitte Winterstein R research project
+
+This document is a collection of webpages that detail the steps taken to conduct our research. The research was implemented in R and as a result, the main focus of this document is to show the R code used to get the results reported in our research report.
